MH3-95596: Refactorize Python packages (libs) and make some optimizations

--- a/boards/templates/bsp.c.j2
+++ b/boards/templates/bsp.c.j2
@@ -76,7 +76,7 @@
     {% set board.ppio = values[component]["SHD_MAINBOARD_PIO_PERIPH"] %}
   {% endif %}
 {% endfor %}
-{% if board.ppio in ['PORT_U2210'] %}
+{% if board.ppio in ['PORT_U2210'] or board.ppio in ['PORT_03720'] %}
   {% from 'macros_port_u2210.j2' import generateLedsInitialization %}
 {% elif board.ppio in ['PIO_11264'] %}
   {% from 'macros_pio_11264.j2' import generateLedsInitialization %}
