--- a/boards/templates/macros_gpio_02467.j2
+++ b/boards/templates/macros_gpio_02467.j2
@@ -1,4 +1,4 @@
-{% macro generateOuputsHeaders(trustzone, core) %}
+{% macro generateOuputsHeaders(genSecure, core) %}
     {% set numPinTotal = core["GPIO_PIN_TOTAL"] %}
     {% for pinNumber in  range(1, numPinTotal + 1) %}
         {% set funcTypeSymName = "BSP_PIN_{}_FUNCTION_TYPE".format(pinNumber) %}
@@ -32,7 +32,7 @@
     {% endfor %}
 {% endmacro %}
 
-{% macro generateInputsHeaders(trustzone, core) %}
+{% macro generateInputsHeaders(genSecure, core) %}
     {% set numPinTotal = core["GPIO_PIN_TOTAL"] %}
     {% for pinNumber in  range(1, numPinTotal + 1) %}
         {% set funcTypeSymName = "BSP_PIN_{}_FUNCTION_TYPE".format(pinNumber) %}
